--- a/TipTap/Module/MyDiary/Cell/TTMyDiaryCell.xib
+++ b/TipTap/Module/MyDiary/Cell/TTMyDiaryCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -131,6 +131,7 @@
                 <outlet property="lineView" destination="uWa-Iu-fil" id="exD-Ig-Zkq"/>
                 <outlet property="monthLabel" destination="dvX-gx-k8L" id="BCi-Pj-66k"/>
                 <outlet property="startLocation" destination="fdu-n6-Ehy" id="2M5-jn-SDQ"/>
+                <outlet property="titleLabel" destination="wdY-yu-iYn" id="Q1a-52-hDU"/>
             </connections>
             <point key="canvasLocation" x="60" y="108.84557721139431"/>
         </tableViewCell>
