--- a/TipTap/Module/SharedDiary/View/SharedDiary.storyboard
+++ b/TipTap/Module/SharedDiary/View/SharedDiary.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -53,7 +53,7 @@
                                                     <rect key="frame" x="8" y="0.0" width="359" height="639"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scroll" translatesAutoresizingMaskIntoConstraints="NO" id="bdE-Ag-BbT">
-                                                            <rect key="frame" x="109" y="586" width="141" height="32"/>
+                                                            <rect key="frame" x="110" y="606" width="139" height="12"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyK-2P-Rce">
                                                             <rect key="frame" x="-128" y="356" width="300" height="13.5"/>
@@ -127,7 +127,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XU-aO-ENz" userLabel="Container">
-                                                    <rect key="frame" x="16" y="20" width="359" height="188"/>
+                                                    <rect key="frame" x="0.0" y="20" width="375" height="188"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l0S-px-aEh" userLabel="bar">
                                                             <rect key="frame" x="0.0" y="9" width="17" height="1"/>
@@ -144,13 +144,13 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="we2-aQ-2fJ" userLabel="Diary Number Label">
-                                                            <rect key="frame" x="77.5" y="0.0" width="230.5" height="12.5"/>
+                                                            <rect key="frame" x="77.5" y="0.0" width="246.5" height="12.5"/>
                                                             <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="10"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2i-JS-5V4" userLabel="Diary Location Label">
-                                                            <rect key="frame" x="75" y="19.5" width="233" height="21"/>
+                                                            <rect key="frame" x="75" y="19.5" width="249" height="21"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="21" id="MUu-vM-cOc"/>
                                                             </constraints>
@@ -159,7 +159,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yir-jg-ddC" userLabel="Diary Body Label">
-                                                            <rect key="frame" x="75" y="48.5" width="233" height="79.5"/>
+                                                            <rect key="frame" x="75" y="48.5" width="249" height="79.5"/>
                                                             <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -171,13 +171,13 @@
                                                         <constraint firstItem="sIP-qd-Pe4" firstAttribute="top" secondItem="8XU-aO-ENz" secondAttribute="top" id="DW2-gQ-xCZ"/>
                                                         <constraint firstItem="sIP-qd-Pe4" firstAttribute="leading" secondItem="l0S-px-aEh" secondAttribute="trailing" constant="8" id="FBJ-EB-a5P"/>
                                                         <constraint firstItem="l0S-px-aEh" firstAttribute="top" secondItem="8XU-aO-ENz" secondAttribute="top" constant="9" id="LS8-TW-UXw"/>
+                                                        <constraint firstAttribute="width" constant="375" id="M5W-aN-iTH"/>
                                                         <constraint firstItem="we2-aQ-2fJ" firstAttribute="leading" secondItem="sIP-qd-Pe4" secondAttribute="trailing" constant="19" id="RGM-tl-haG"/>
                                                         <constraint firstItem="yir-jg-ddC" firstAttribute="top" secondItem="n2i-JS-5V4" secondAttribute="bottom" constant="8" id="UE0-Om-Es3"/>
                                                         <constraint firstItem="yir-jg-ddC" firstAttribute="leading" secondItem="n2i-JS-5V4" secondAttribute="leading" id="UxH-P8-IdG"/>
                                                         <constraint firstItem="we2-aQ-2fJ" firstAttribute="top" secondItem="sIP-qd-Pe4" secondAttribute="top" id="X6j-Cz-Mn1"/>
                                                         <constraint firstItem="l0S-px-aEh" firstAttribute="leading" secondItem="8XU-aO-ENz" secondAttribute="leading" id="XYf-XG-KI0"/>
                                                         <constraint firstItem="yir-jg-ddC" firstAttribute="trailing" secondItem="n2i-JS-5V4" secondAttribute="trailing" id="YRZ-p0-7jj"/>
-                                                        <constraint firstAttribute="width" constant="359" id="bGa-0e-se8"/>
                                                         <constraint firstItem="n2i-JS-5V4" firstAttribute="top" secondItem="we2-aQ-2fJ" secondAttribute="bottom" constant="7" id="cPg-lr-agy"/>
                                                         <constraint firstItem="n2i-JS-5V4" firstAttribute="leading" secondItem="8XU-aO-ENz" secondAttribute="leading" constant="75" id="t4M-92-4py"/>
                                                         <constraint firstAttribute="bottom" secondItem="yir-jg-ddC" secondAttribute="bottom" constant="60" id="vrS-F4-Owb"/>
@@ -197,6 +197,7 @@
                                             <outlet property="diaryNumberLabel" destination="we2-aQ-2fJ" id="oFo-kM-LAo"/>
                                             <outlet property="locationLabel" destination="n2i-JS-5V4" id="WYN-kh-BNe"/>
                                             <outlet property="timeLabel" destination="sIP-qd-Pe4" id="nKP-8a-6TM"/>
+                                            <outlet property="widthConst" destination="M5W-aN-iTH" id="2KE-Sq-zfP"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -225,6 +226,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="scroll" width="141" height="32"/>
+        <image name="scroll" width="139" height="12"/>
     </resources>
 </document>
