--- a/TipTap/Base.lproj/LaunchScreen.storyboard
+++ b/TipTap/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tWF-tl-WLn">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FsO-tG-19w">
                                         <rect key="frame" x="21" y="0.0" width="1" height="272"/>
@@ -44,21 +44,21 @@
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introThird" translatesAutoresizingMaskIntoConstraints="NO" id="6OW-Pm-o6p">
-                                        <rect key="frame" x="226" y="293" width="109" height="117"/>
+                                        <rect key="frame" x="226" y="313" width="109" height="117"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="117" id="7Gs-YU-KLd"/>
                                             <constraint firstAttribute="width" constant="109" id="Oka-Jc-KbX"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introFourth" translatesAutoresizingMaskIntoConstraints="NO" id="Qyc-Xp-ct7">
-                                        <rect key="frame" x="238" y="503" width="137" height="144"/>
+                                        <rect key="frame" x="238" y="523" width="137" height="144"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="144" id="8oG-BV-qfD"/>
                                             <constraint firstAttribute="width" constant="137" id="ZFy-P8-J9H"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introLogo" translatesAutoresizingMaskIntoConstraints="NO" id="nOs-lY-XPW">
-                                        <rect key="frame" x="20" y="410" width="144" height="45"/>
+                                        <rect key="frame" x="20" y="430" width="144" height="45"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -81,7 +81,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tWF-tl-WLn" secondAttribute="bottom" id="3gg-2d-dbJ"/>
-                            <constraint firstItem="tWF-tl-WLn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Nlo-xX-UyO"/>
+                            <constraint firstItem="tWF-tl-WLn" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Nlo-xX-UyO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tWF-tl-WLn" secondAttribute="trailing" id="Qtp-wa-3dC"/>
                             <constraint firstItem="tWF-tl-WLn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qDO-hb-lko"/>
                         </constraints>
