--- a/TipTap/Module/EditDiary/EditDiary.storyboard
+++ b/TipTap/Module/EditDiary/EditDiary.storyboard
@@ -65,7 +65,7 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqS-3q-plH">
+                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqS-3q-plH">
                                 <rect key="frame" x="20" y="159" width="335" height="1"/>
                                 <color key="backgroundColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -142,7 +142,7 @@
                                     <action selector="pressedCloseButton:" destination="UQu-jj-iLM" eventType="touchUpInside" id="Foq-VD-jUP"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kc9-2R-L8O">
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kc9-2R-L8O">
                                 <rect key="frame" x="335" y="20" width="30" height="40"/>
                                 <fontDescription key="fontDescription" name="KoPubDotumPM" family="KoPubDotum_Pro" pointSize="14"/>
                                 <state key="normal" title="완료">
@@ -193,6 +193,7 @@
                         <outlet property="locationStackView" destination="YZE-7e-2Sp" id="kLk-11-5Mk"/>
                         <outlet property="numberLabel" destination="Lzk-Ql-zw5" id="wZu-6A-gEM"/>
                         <outlet property="placeHolderLabel" destination="fv7-Oi-G3L" id="isW-0Q-qM5"/>
+                        <outlet property="submitButton" destination="kc9-2R-L8O" id="qhU-O5-FBb"/>
                         <outlet property="textCountLabel" destination="gQO-wc-Go9" id="gUv-YP-H8R"/>
                         <outlet property="travelPicture" destination="1Ha-Hl-udO" id="PIT-DO-FMA"/>
                     </connections>
@@ -203,7 +204,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cancel" width="17" height="17"/>
+        <image name="cancel" width="24" height="24"/>
         <image name="gallery" width="24" height="24"/>
         <image name="location" width="25" height="25"/>
     </resources>
