--- a/TipTap/Module/SharedDiary/View/SharedDiary.storyboard
+++ b/TipTap/Module/SharedDiary/View/SharedDiary.storyboard
@@ -29,9 +29,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sharedBack" translatesAutoresizingMaskIntoConstraints="NO" id="Mcm-6n-7Sy">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EqW-ro-Ufx">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="K0n-HT-A2H">
                                     <size key="itemSize" width="375" height="208"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -78,7 +81,7 @@
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <constraints>
                                                         <constraint firstItem="fNA-rd-Olh" firstAttribute="top" secondItem="NPJ-iD-caQ" secondAttribute="top" constant="8" id="3JE-PW-Jek"/>
@@ -91,7 +94,7 @@
                                                 </view>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="bottomMargin" secondItem="NPJ-iD-caQ" secondAttribute="bottom" id="Ii6-MA-hIU"/>
                                             <constraint firstItem="NPJ-iD-caQ" firstAttribute="leading" secondItem="oJW-ba-M3A" secondAttribute="leadingMargin" id="PGs-iI-a6i"/>
@@ -114,7 +117,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XU-aO-ENz" userLabel="Container">
-                                                    <rect key="frame" x="0.0" y="20" width="375" height="188"/>
+                                                    <rect key="frame" x="0.0" y="28" width="375" height="172"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l0S-px-aEh" userLabel="bar">
                                                             <rect key="frame" x="0.0" y="9" width="59" height="1"/>
@@ -141,13 +144,13 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yir-jg-ddC" userLabel="Diary Body Label">
-                                                            <rect key="frame" x="67" y="74" width="257" height="54"/>
+                                                            <rect key="frame" x="67" y="74" width="257" height="38"/>
                                                             <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="13"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="sIP-qd-Pe4" firstAttribute="centerY" secondItem="l0S-px-aEh" secondAttribute="centerY" id="9rW-OP-uTf"/>
                                                         <constraint firstAttribute="trailing" secondItem="yir-jg-ddC" secondAttribute="trailing" constant="51" id="ASI-im-QVo"/>
@@ -165,7 +168,7 @@
                                                 </view>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="8XU-aO-ENz" secondAttribute="trailing" id="NP3-v0-jNz"/>
                                             <constraint firstItem="8XU-aO-ENz" firstAttribute="top" secondItem="RMN-JY-nD4" secondAttribute="topMargin" id="Qnw-T0-Rct"/>
@@ -187,10 +190,14 @@
                         </subviews>
                         <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="Mcm-6n-7Sy" firstAttribute="leading" secondItem="EK5-2O-ak1" secondAttribute="leading" id="CKQ-Sp-FgA"/>
+                            <constraint firstItem="EK5-2O-ak1" firstAttribute="bottom" secondItem="Mcm-6n-7Sy" secondAttribute="bottom" id="Hmy-aq-Oza"/>
                             <constraint firstItem="EqW-ro-Ufx" firstAttribute="top" secondItem="EK5-2O-ak1" secondAttribute="top" id="K71-so-Iaz"/>
                             <constraint firstItem="EK5-2O-ak1" firstAttribute="trailing" secondItem="EqW-ro-Ufx" secondAttribute="trailing" id="M5c-Ln-Q7T"/>
                             <constraint firstItem="EqW-ro-Ufx" firstAttribute="leading" secondItem="EK5-2O-ak1" secondAttribute="leading" id="XZl-Wv-OAa"/>
+                            <constraint firstItem="EK5-2O-ak1" firstAttribute="trailing" secondItem="Mcm-6n-7Sy" secondAttribute="trailing" id="Xag-Im-1HZ"/>
                             <constraint firstItem="EK5-2O-ak1" firstAttribute="bottom" secondItem="EqW-ro-Ufx" secondAttribute="bottom" id="t3C-jQ-ZDx"/>
+                            <constraint firstItem="Mcm-6n-7Sy" firstAttribute="top" secondItem="xN8-QN-gI4" secondAttribute="top" id="xcm-jb-G0N"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EK5-2O-ak1"/>
                     </view>
@@ -204,6 +211,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="sharedBack" width="375" height="667"/>
         <image name="tiptap" width="108" height="56"/>
     </resources>
 </document>
